--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,3 +1,4 @@
+<!--nav starts here  -->
 {% load static %}
 <nav>
       <div>
@@ -5,3 +6,4 @@
       </div><br><br><br>
     <p class="nav_data"> FBH <br>FRAUD BANK <br>OF HYDERBAD </p>
      </nav>
+<!--nav ends here  -->
