--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<!--nav bar starts here  -->
+<!--nav bar start's here  -->
 {% load static %}
 <nav>
       <div>
@@ -7,5 +7,6 @@
     <p class="nav_data"> FBH <br>FRAUD BANK <br>OF HYDERBAD </p>
      </nav>
 <!--nav ends here  -->
+
 
 
