--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,7 +6,8 @@
       </div><br><br><br>
     <p class="nav_data"> FBH <br>FRAUD BANK <br>OF HYDERBAD </p>
      </nav>
-<!--nav b ends here  -->
+<!--nav bar ends here  -->
+
 
 
 
