--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {%  extends 'base.html' %}
 {%  block content %}
 {% load static %}
-<!-- main -->
+<!-- main part-->
 <div class="alllogos">
     <a href="{% url 'profile' %}"><img src="{% static 'assets/Profile.png'%}" class="logos" alt="" title="Account"></a>
 <a href="{% url 'pin' %}"><img src="{% static 'assets/pin.jpg' %}" class="logos" alt="" title="Pin generation"></a>
@@ -13,3 +13,4 @@
 
 
 {%  endblock content %}
+
